fixed file selection overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -510,3 +510,7 @@ body, .master-container {
 .reply-indicator {
     height: 17px;
 }
+
+.profile-file-select {
+    overflow: hidden;
+}
